--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
                 <p>具備豐富金融前線實務與數位產品專案管理經驗。現任銀行 PM，專注於數位帳戶流程優化、異常監控報表建置及跨部門信貸合作。擁有 MBA 學位，並曾因防制洗錢優異表現獲記嘉獎。</p>
                 <div class="contact-info">
                     <span><i class="fas fa-phone-alt"></i> 0989-064-989</span>
-                    <span><i class="fas fa-envelope"></i> sallychen@example.com</span>
-                    <span><i class="fas fa-map-marker-alt"></i> 台北市</span>
+                    <span><i class="fas fa-envelope"></i> kitty8031@gmail.com</span>
+                    <span><i class="fas fa-map-marker-alt"></i> 新北市</span>
                 </div>
             </div>
         </header>
@@ -519,3 +519,4 @@
 
 </body>
 </html>
+
