--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            object-position: center; /* 讓照片置中，不切頭 */
+            object-position: center; /* 讓照片置中 */
         }
 
         .header-content {
